--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,35 @@ tmp/
 # 环境变量
 .env
 .env.local
+
+# ===== 高级模式示例 =====
+
+# 通配符示例
+# ? 匹配任意一个字符
+test?.txt
+
+# * 匹配任意字符
+*.backup
+*.bak
+
+# ** 匹配任意中间目录
+logs/**/debug.log
+
+# 反向忽略示例（! 语法）
+# 忽略所有 .txt 文件
+*.txt
+# 但不忽略 important.txt
+!important.txt
+# 也不忽略 docs/ 目录下的 .txt
+!docs/*.txt
+
+# 目录特定规则
+# 只忽略根目录的 build 文件夹
+/build/
+# 忽略所有层级的 temp 文件夹
+**/temp/
+
+# 复杂模式
+# 忽略所有 .a 文件，除了 lib.a
+*.a
+!lib.a
